worked on portfolio, contact and toggle navbar
i cant really go into details cos i dont remember it all

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <!--for d navbar in d header-->
             <div id="nav_in_info" class="d-none d-lg-block">
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
+                <a href="about.html" class="current_nav">About</a>
                 <a href="resume.html">Resume</a>
                 <a href="skills.html">Skills & Services</a>
                 <a href="port.html">Portfolio</a>
@@ -40,7 +40,7 @@
         <div id="toggle_nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="current_toggle_nav">About</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="skills.html">Skills & Services</a></li>
                 <li><a href="port.html">Portfolio</a></li>
