--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <div id="toggle_nav">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="current_toggle_nav">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="skills.html">Skills & Services</a></li>
@@ -39,9 +39,9 @@
         
         <div id="open_info">
             <h2>Abubakri Sherif Opeyemi</h2>
-            <p>I'm a passionate <strong>Software Engineer!</strong></p>
+            <p>I'm an upcoming & passionate <strong>Software Engineer!</strong></p>
             <div id="nav_in_info" class="d-none d-lg-block">
-                <a href="index.html">Home</a>
+                <a href="index.html" class="current_nav" >Home</a>
                 <a href="about.html">About</a>
                 <a href="resume.html">Resume</a>
                 <a href="skills.html">Skills & Services</a>
@@ -49,11 +49,11 @@
                 <a href="contact.html">Contact</a>
             </div>
             <div id="socialbtn"> 
-                <a href="#"><span class="fab fa-twitter"></span></a>
-                <a href="#"><span class="fab fa-github"></span></a>
-                <a href="#"><span class="fab fa-instagram"></span></a>
-                <a href="#"><span class="fab fa-linkedin"></span></a>
-                <a href="#"><span class="fab fa-facebook-f"></span></a> 
+                <a target="blank" href="#"><span class="fab fa-twitter"></span></a>
+                <a target="blank" href="https://github.com/saykeed"><span class="fab fa-github"></span></a>
+                <a target="blank" href="https://www.instagram.com/opeyemi_sherif_asiwaju/#"><span class="fab fa-instagram"></span></a>
+                <a target="blank" href="https://www.linkedin.com/in/sherif-abubakri-019971196/"><span class="fab fa-linkedin"></span></a>
+                <a target="blank" href="#"><span class="fab fa-facebook-f"></span></a> 
             </div>
         </div>
         
