--- a/port.html
+++ b/port.html
@@ -32,7 +32,7 @@
                 <a href="about.html">About</a>
                 <a href="resume.html">Resume</a>
                 <a href="skills.html">Skills & Services</a>
-                <a href="port.html">Portfolio</a>
+                <a href="port.html" class="current_nav">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
@@ -43,7 +43,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="skills.html">Skills & Services</a></li>
-                <li><a href="port.html">Portfolio</a></li>
+                <li><a href="port.html" class="current_toggle_nav">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -64,34 +64,42 @@
         </div>
 
         <div id="port_gallery">
-            <div id="port_work">
+            <div id="port_work" class="gen_port">
                 <div id="portfolio_text">
-                    <h5>Portfolio</h5>
+                    <h5>My-Portfolio</h5>
                     <p class="stack_used">CSS, BOOTSTRAP, JAVASCRIPT</p>
-                    <p id="icon"><a class="fas fa-anchor" href="#"></a><i class="fas fa-plus"></i></p>
+                    <p id="icon"><a class="fas fa-anchor" target="blank" href="https://github.com/saykeed/myportfolio"></a><i class="fas fa-plus"></i></p>
                 </div>
             </div>
-            <div id="huddle_work">
+            <div id="huddle_work" class="gen_port">
                 <div id="portfolio_text">
                     <h5>Huddle land page</h5>
                     <p class="stack_used">CSS, BOOTSTRAP</p>
-                    <p id="icon"><a class="fas fa-anchor" href="#"></a><i class="fas fa-plus"></i></p>
+                    <p id="icon"><a class="fas fa-anchor" target="blank" href="https://github.com/saykeed/huddlelandpage"></a><i class="fas fa-plus"></i></p>
                 </div>
             </div>
-            <div id="nimc_work">
+            <div id="nimc_work" class="gen_port">
                 <div id="portfolio_text">
                     <h5>Nimc land page</h5>
                     <p class="stack_used">CSS, BOOTSTRAP</p>
-                    <p id="icon"><a class="fas fa-anchor" href="#"></a><i class="fas fa-plus"></i></p>
+                    <p id="icon"><a class="fas fa-anchor" target="blank" href="saykeed.github.io"></a><i class="fas fa-plus"></i></p>
                 </div>
             </div>
-            <div id="testimony_work">
+            <div id="testimony_work" class="gen_port">
                 <div id="portfolio_text">
                     <h5>Testimony</h5>
                     <p class="stack_used">CSS GRID</p>
-                    <p id="icon"><a class="fas fa-anchor" href="#"></a><i class="fas fa-plus"></i></p>
+                    <p id="icon"><a class="fas fa-anchor" target="blank" href="#"></a><i class="fas fa-plus"></i></p>
                 </div>
             </div>
+            <div id="clipboard_work" class="gen_port">
+                <div id="portfolio_text">
+                    <h5>Clipboard</h5>
+                    <p class="stack_used">CSS, BOOTSTRAP</p>
+                    <p id="icon"><a class="fas fa-anchor" target="blank" href="https://github.com/saykeed/clipboard-land-page"></a><i class="fas fa-plus"></i></p>
+                </div>
+            </div>
+
             <div id="gallery_textarea"><h3></h3></div>
         </div>
         
