--- a/skills.html
+++ b/skills.html
@@ -31,7 +31,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="resume.html">Resume</a>
-                <a href="skills.html">Skills & Services</a>
+                <a href="skills.html" class="current_nav">Skills & Services</a>
                 <a href="port.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </div>
@@ -42,7 +42,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="resume.html">Resume</a></li>
-                <li><a href="skills.html">Skills & Services</a></li>
+                <li><a href="skills.html" class="current_toggle_nav">Skills & Services</a></li>
                 <li><a href="port.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
