--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 <a href="resume.html">Resume</a>
                 <a href="skills.html">Skills & Services</a>
                 <a href="port.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
+                <a href="contact.html" class="current_nav">Contact</a>
             </div>
         </nav>
         <!--collapsed navmenu for small screens-->
@@ -44,7 +44,7 @@
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="skills.html">Skills & Services</a></li>
                 <li><a href="port.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="current_toggle_nav">Contact</a></li>
             </ul>
         </div>
         <div id="sub_title">
