--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
             <div id="nav_in_info" class="d-none d-lg-block">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="resume.html">Resume</a>
+                <a href="resume.html" class="current_nav">Resume</a>
                 <a href="skills.html">Skills & Services</a>
                 <a href="port.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
@@ -41,7 +41,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="resume.html">Resume</a></li>
+                <li><a href="resume.html" class="current_toggle_nav">Resume</a></li>
                 <li><a href="skills.html">Skills & Services</a></li>
                 <li><a href="port.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
